package com.nanyin.pattern.strategy;
// 动物
public interface TrafficStrategy {
    void go();
}
